tests/neg-custom-args/captures/gears-problem.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/gears-problem.scala:19:60 --------------------------------
19 |    val fut: Future[T]^{C} = collector.results.read().right.get // error
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                             Found:    Future[T]^{collector.futures*}
   |                             Required: Future[T]^{C}
   |
   |                             Note that capability `collector.futures*` cannot flow into capture set {C}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/gears-problem.scala:24:32 --------------------------------
24 |    val fut2: Future[T]^{C} = r.get // error
   |                              ^^^^^
   |                              Found:    Future[T^{}]^{collector.futures*}
   |                              Required: Future[T]^{C}
   |
   |                              Note that capability `collector.futures*` cannot flow into capture set {C}.
   |
   | longer explanation available when compiling with `-explain`
there were 4 deprecation warnings; re-run with -deprecation for details
